#
# some news ... see also TODO for hints
#


2017-09-24 -> add game_obj_func_t which holds all functions
	   -> make flying_astronaut_2 and collision use it
	   -> add first stuff for the config handling (data driven design)
	   -> add skeleton and first parts for dynamic_config (flying astrount data driven)
	   -> add new_velo to game_obj_t
	   -> add libconfig for configuration file handling

2017-09-22 -> fix collision_object function

2017-09-20 -> use new game_obj_t and game_obj_data_t in all examples
	   -> add functions for collision handling (lib and two example's)

2017-09-19 -> add usage.md to describe the general usage of the library/examples
	   -> some first changes regarding object fab

2017-09-18 -> some smaller improvements in flying_astronaut and input_control
	   -> some smaller documentation updates

2017-09-17 -> add skeleton for menu program which should start all demos
	   -> add function init_game_object_from_file_simple() which uses the
	      texture info for with/height
	   -> add file object_fab.c to libgame (game object fab based on a
	      configuration file)

2017-09-15 -> remove accel related stuff
	   -> finalize flying_astronaut example

2017-09-13 -> add some functions to handle mouse related topics
	   -> finalize follow_mouse example
	   -> add some more documentation
	   -> add some functions in different areas
	   -> add skeleton and first steps of flying_astronaut "ball" demo
	   -> go back to int for vector2d_t and update examples

2017-09-12 -> add keyboard handling in input_control
	   -> add some more documenation and links around SDL

2017-09-11 -> add fullscreen kdo arg to hello_sdl
	   -> fix wrong usage of accel and velo in input_control example
	   -> add init_game_object_simple() wich uses SDL_QueryTexture to get
	      the size of the texture
	   -> add skeleton for follow_mouse click example
	   -> add some more event "handler" in input_control
