@@ -28,4 +28,22 @@ config:
 			file = "astronaut.png";
 		}
 	  );
+
+	  objects = (
+	  	{
+			name = "player";
+			texture = "player";
+			init_pos = { x = 0; y = 400; };
+		},
+		{
+			name = "fixed_01";
+			texture = "others";
+			init_pos = { x = 100; y = 300; };
+		},
+		{
+			name = "fixed_02";
+			texture = "others";
+			init_pos = { x = 50; y = 100; };
+		}
+	  );
 }
