@@ -7,4 +7,3 @@
 /input.o
 /object_fab.o
 /collision.o
-/config.o
